django template adjustment and basic django blocks addition

--- a/bluesky/systems/templates/systems/dashboard.html
+++ b/bluesky/systems/templates/systems/dashboard.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>BLUE SKY SYSTEM</title>
-</head>
-<body>
+{% extends 'systems/main.html' %}
 
-    <h1>DASHBOARD</h1>
-    <h2>BLUE SKY SYSTEM POWERED BY AADIT CHADDA</h2>
-</body>
-</html>
+{% block content %}
+
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac posuere nisl. Mauris lobortis metus mi, sit amet dapibus ligula efficitur vel. Nam mollis massa at dapibus tristique. Morbi congue metus ac odio dignissim, non tempus felis ornare. Ut non dui odio. Praesent tempus est augue, nec faucibus ante scelerisque eget. Nunc eget odio sit amet mauris mattis varius ut in diam. Vivamus aliquet vitae ligula nec suscipit. Duis efficitur enim sit amet ipsum pulvinar iaculis. Sed elementum ornare erat mattis dapibus. Proin ligula lorem, ultricies maximus posuere vitae, aliquet eget elit. Donec et fringilla massa. Maecenas vel nunc sed arcu fermentum consequat at in lacus. Quisque sagittis ante urna, sed sodales est viverra eu.
+</p>
+
+{% endblock %}
