--- a/bluesky/systems/templates/systems/our_clients.html
+++ b/bluesky/systems/templates/systems/our_clients.html
@@ -1,5 +1,10 @@
 {% extends 'systems/main.html' %}
 
 {% block content %}
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/main_navbar.css' %}">
+
+{% include 'systems/navbar.html' %}
+
 
 {% endblock %}
