--- a/bluesky/systems/templates/systems/our_solutions.html
+++ b/bluesky/systems/templates/systems/our_solutions.html
@@ -1,5 +1,10 @@
 {% extends 'systems/main.html' %}
 
+
 {% block content %}
+{% load static %}
+<head><link rel="stylesheet" type="text/css" href="{% static '/css/main_navbar.css' %}"></head>
+
+{% include 'systems/navbar.html' %}
 
 {% endblock %}
