--- a/bluesky/static/css/navbar.css
+++ b/bluesky/static/css/navbar.css
@@ -13,6 +13,29 @@ body {
 
 /* Navbar section */
 
+
+
+
+.container1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+}
+.divl{
+    margin: 50px;
+    display: flex;
+    justify-content: left;
+    align-items: left;
+}
+.divr{
+    margin: 50px;
+    display: flex;
+    justify-content: right;
+    align-items: right;
+}
+
 .nav {
     width: 100%;
     height: 100px;
@@ -75,8 +98,9 @@ body {
 
 .home {
     width: 100%;
-    height: 100vh;
-    background-image: url('https://images.unsplash.com/photo-1584677123777-742161156eb7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80');
+    height: 110vh;
+    background-image: url('https://i.postimg.cc/cHx2BHRr/main-photo.jpg');
+    background-repeat: no-repeat;
     background-position: center top;
 	background-size:cover;
 }
@@ -361,3 +385,4 @@ body {
 		padding:2%;
 	}
 }
+
