redesigning and unifying navigation bar across the project

--- a/bluesky/static/css/navbar.css
+++ b/bluesky/static/css/navbar.css
@@ -14,8 +14,6 @@ body {
 /* Navbar section */
 
 
-
-
 .container1{
     display: flex;
     justify-content: center;
@@ -375,10 +373,9 @@ body {
 	font-size: 4rem;
 }
 .myP {
-	text-align: justify;
+	text-align: justify center;
 	padding-left:15%;
-	padding-right:15%;
-	font-size: 20px;
+	font-size: 20vh;
 }
 @media all and (max-width:700px){
 	.myP {
